# CppCapybara

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  cpp14.h  format_literal.cpp  format_literal.h  reversed.h  zip.h
src/tests/: format_literal_tests.cpp  reversed_tests.cpp  zip_tests.cpp
utils/: CMakeLists.txt  format_literal.h  reversed.h
utils/sources/: reversed.h
utils/tests/: format_literal_tests.cpp  reverse_tests.cpp  reversed_tests.cpp
